# metaedit

./: .gitignore  Cargo.toml  README.md  pyproject.toml  test_metaedit.py
.github/workflows/: pypi-publish.yml
metaedit/: __init__.py  cli.py
src/: lib.rs
